--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 ffmpeg-sys = { version = "0.0.1", path = "./ffmpeg-sys" }
+reqwest = "0.10.1"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.44"
+tokio = { version = "0.2", features = ["macros"] }
