--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 ffmpeg-sys = { version = "0.0.1", path = "./ffmpeg-sys" }
+futures = "0.3.1"
 reqwest = "0.10.1"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.44"
